rename angular module and controller

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </head>
-    <body>
-        <div ng-app="myApp" ng-controller="myCtrl">
+    <body ng-app="highchartsApp">
+        <div ng-controller="donutChartController">
             <div highcharts="chartOptions" id="container" style="min-width: 310px; height: 400px; max-width: 800px;"></div>
         </div>
     </body>
