hard code values for high and low activity datasets

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     </head>
     <body ng-app="highchartsApp">
         <div ng-controller="donutChartController">
-            <highchart config="chartOptions" class="donut-chart-container">
-            </highchart>
+            <highchart config="chartOptions" class="donut-chart-container"></highchart>
         </div>
 
         <div ng-controller="barChartController">
-            <highchart config="chartOptions" class="bar-chart-container"></highchart>
-            <highchart config="chartOptions" class="bar-chart-container"></highchart>
+            <highchart config="chartOptions1" class="bar-chart-container"></highchart>
+            <highchart config="chartOptions2" class="bar-chart-container"></highchart>
         </div>
     </body>
 </html>
