add divider between bar charts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <div ng-controller="barChartController">
             <highchart config="chartOptions1" class="bar-chart-container"></highchart>
+            <div class="bar-chart-divider"></div>
             <highchart config="chartOptions2" class="bar-chart-container"></highchart>
         </div>
     </body>
