add title and subtitle to bar chart

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <highchart config="chartOptions" class="donut-chart-container"></highchart>
         </div>
 
+        <h1 class="standards-widget-title">ACTIVITIES BY STANDARD</h1>
+        <h2 class="standards-widget-subtitle">Number of Activities Per Standard</h2>
         <div ng-controller="highActivityBarChartController">
             <highchart config="chartOptions" class="bar-chart-container"></highchart>
         </div>
